Version: 0.8.2
Date: 2021.07.02
  Changes:
    - Drone Port now uses a Train Stop internally so it can be opened from the map view
    - Drones now try to only pull as many batteries as needed for a round trip, rather than a full stack
  Optimizations:
    - MASSIVE performance improvement of resource spawner. This does mean there's a small chance of "mixed patches" but that's worth it for code that's 60x faster!
---------------------------------------------------------------------------------------------------
Version: 0.8.3
Date: 2021.07.04
  Changes:
    - Collapsing the to-do list now keeps the item list open, only hiding the ingredient list
    - Mining a building that is on your to-do list increments the list by one
    - To-do list now responds to Craft Bench and Equipment Workshop items
---------------------------------------------------------------------------------------------------
Version: 0.8.4
Date: 2021.07.06
  Optimizations:
    - Further performance improvements and refactoring
  Modding:
    - Added compatibility with Text Plates
    - Added compatibility with BottleneckLite
---------------------------------------------------------------------------------------------------
Version: 0.8.5
Date: 2021.07.07
  Changes:
    - Added Tips + Tricks entry explaining how (not) to use Train conditions
  Bugfixes:
    - Fixed resource wells spawning off-centre
    - Fixed that generators running out of fuel (but not water) would generate free energy (#74)
    - Taming lizard doggos was broken due to an error in refactoring (#75)
  Gui:
    - Improvements to Resource/Object/Beacon Scanner GUIs
    - Tidying up of Milestone GUI
  Combat Balancing:
    - Unarmed melee strikes now stun the target for much longer
---------------------------------------------------------------------------------------------------
Version: 0.9.0
Date: 2021.07.19
  Changes:
    - Total revamp of GUI systems, which does unfortunately mean incompatibility with the old and busted system.